--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
     "googleapis": "^120.0.0",
     "jsonwebtoken": "^9.0.0",
