--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "connect-mongo": "^5.0.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
@@ -12,6 +13,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1",
     "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0"
   },
   "scripts": {
